--- a/TP1/nbproject/private/private.properties
+++ b/TP1/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/gravufo/.netbeans/7.2/build.properties
+user.properties.file=C:\\Users\\Gravufo\\.netbeans\\7.1\\build.properties
